--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
   "devDependencies": {
     "@types/jest": "^29.2.5",
     "@types/node": "18.11.18",
+    "aws-cdk": "2.62.2",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
-    "aws-cdk": "2.62.2",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.4"
   },
   "dependencies": {
+    "@aws-cdk/aws-ec2": "^1.192.0",
+    "@aws-cdk/aws-iam": "^1.192.0",
     "aws-cdk-lib": "2.62.2",
     "constructs": "^10.0.0",
+    "dotenv": "^16.0.3",
     "source-map-support": "^0.5.21"
   }
 }
